@@ -35,13 +35,24 @@
   <% @stickies.each do |sticky| %>
     <% @object = sticky %>
     <% @position = ("%.6f" % Time.now.to_f).gsub('.','_') %>
-    <tbody id="sticky_<%= sticky.id %>">
+    <tbody id="sticky_<%= sticky.id %>" onmouseover="$('#sticky_<%= sticky.id %>_empty').hide();$('#sticky_<%= sticky.id %>_checkmark').show()" onmouseout="$('#sticky_<%= sticky.id %>_checkmark').hide();$('#sticky_<%= sticky.id %>_empty').show()">
       <tr class="<%= 'recently_updated' if current_user.last_sign_in_at and current_user.last_sign_in_at < sticky.updated_at %>">
         <td>
-          <%= image_tag("gentleface/16/checkmark.png", alt: '', size: '10x10') if sticky.completed? %>
-          <%= link_to sticky.name, sticky, style: sticky.completed? ? "text-decoration:line-through" : "" %> <%= link_to image_tag('gentleface/16/list_bullets.png', alt: '', title: "Group #{sticky.group.name}", size: '10x10'), sticky.group if sticky.group %>
-          <span id="<%= @object.class.name.downcase %>_<%= @object.id %>_comments_<%= @position %>_short_description" style="<%= "color:#999" if sticky.completed? %>">
-            <%= sticky.full_description.truncate(100, omission: '') %> <%= link_to_function (sticky.comments.size > 0 ? pluralize(sticky.comments.size, "comment") : 'more...'), "toggleSticky('##{@object.class.name.downcase}_#{@object.id}_comments_#{@position}');", id: "#{@object.class.name.downcase}_#{@object.id}_comments_#{@position}_link" %>
+          <span id="sticky_<%= sticky.id %>_icon">
+            <% if sticky.completed? %>
+              <%= image_tag 'gentleface/16/checkmark.png', alt: '', size: '10x10', style: 'padding-right:3px' %>
+            <% elsif current_user.all_stickies.include?(sticky) %>
+              <%= image_tag 'colorpicker/blank.gif', alt: '', id: "sticky_#{sticky.id}_empty", size: '10x10', style: 'padding-right:3px' %>
+              <%= link_to image_tag('gentleface/16/checkbox_unchecked.png', alt: '', size: '10x10'), complete_sticky_path(sticky), method: :post, remote: true, id: "sticky_#{sticky.id}_checkmark", style: 'display:none;padding-right:3px' %>
+            <% else %>
+              <%= image_tag 'colorpicker/blank.gif', alt: '', size: '10x10', style: 'padding-right:3px' %>
+            <% end %>
+          </span>
+          <%= link_to sticky.name, sticky, style: sticky.completed? ? "text-decoration:line-through" : "", id: "sticky_#{sticky.id}_name" %> <%= link_to image_tag('gentleface/16/list_bullets.png', alt: '', title: "Group #{sticky.group.name}", size: '10x10'), sticky.group if sticky.group %>
+          <span id="sticky_<%= sticky.id %>_description" style="<%= "color:#999" if sticky.completed? %>">
+            <span id="<%= @object.class.name.downcase %>_<%= @object.id %>_comments_<%= @position %>_short_description">
+              <%= sticky.full_description.truncate(100, omission: '') %> <%= link_to_function (sticky.comments.size > 0 ? pluralize(sticky.comments.size, "comment") : 'more...'), "toggleSticky('##{@object.class.name.downcase}_#{@object.id}_comments_#{@position}');", id: "#{@object.class.name.downcase}_#{@object.id}_comments_#{@position}_link" %>
+            </span>
           </span>
           <div style="max-width:600px;display:none" id="<%= @object.class.name.downcase %>_<%= @object.id %>_comments_<%= @position %>_description">
             <%= simple_format sticky.full_description %>
