@@ -1,0 +1,3 @@
+$("#sticky_<%= @sticky.id %>_name").css('text-decoration', 'line-through');
+$("#sticky_<%= @sticky.id %>_icon").html("<%= escape_javascript(image_tag('gentleface/16/checkmark.png', alt: '', size: '10x10', style: 'padding-right:3px')) %>");
+$("#sticky_<%= @sticky.id %>_description").css('color', '#999');
