@@ -21,6 +21,6 @@
 
   <p>
     <b>Color:</b>
-    <span style="background-color: <%= @tag.color %>"><%= @tag.color %></span>
+    <span class="tag_bubble" style="background-color: <%= @tag.color %>"><%= @tag.color %></span>
   </p>
 </fieldset>
