@@ -1,6 +1,7 @@
 == 0.20.0
 
 * Enhancements
+  * Stickies can now be marked as complete directly in the list view
   * Service Accounts can now be used by other applications to authenticate users through the use of application specific tokens
     * Allows authenticated applications to create view templates and create new groups
   * Using Rails 3.2.3.rc1
